[tool.poetry]
name = "homework-web-5"
version = "0.1.0"
description = ""
authors = ["ivan-markovskyi <ivan.markovskyi.in@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
